# metaphor

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  THIRD_PARTY_NOTICES  c3lsp.json  project.json  project.json.in
build-test/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
docs/: style_guide.md
docs/core/: device.md  graph.md  nn.md  optimizer.md  optimizer_model.md  persistence.md  tensor.md  tensor_core.md
docs/execution/: backward.md  checkpointing_and_liveness.md  lazy_execution.md
docs/installation/: base.md  cuda.md  hip.md
docs/memory/: default_persistence.md  memory.md
examples/: attention.c3  binary_sentiment.c3  cifar10.c3  dnn.c3  embedding.c3  least_squares.c3  llama.c3  llama_debug.c3  llama_generate.c3  llama_lora_train.c3  llama_server.c3  mamba.c3  mamba2_generate.c3  mamba_generate.c3  mamba_lora_train.c3  mamba_overfit.c3  mamba_overfit_cuda.c3  mnist.c3  mnist_cuda.c3  offload_bench.c3  qwen_generate.c3  test_prefill.c3  test_rope.c3
scripts/: download_bpe_test_data.sh
src/: events.c3  logging.c3  rtti.c3  settings.c3  tensor.c3
src/cas/: cas.c3  expr_builder.c3  ir_entry.c3
src/codegen/: kernel_codegen.c3  kernel_ir.c3
src/cuda/: .include_paths.cache  .library_paths.cache  build.zig  build.zig.zon  config.clangd  cuda_library.cu  interop.h  logging.h  root.zig
src/cuda/blas/: max.cu  reduce_backward.cu  utils.cu
src/cuda/core/: assert.h  cast.h  includes.h
src/cuda/cutensor/: backend.cu  contraction.cu  elementwise_binary.cu  permutate.cu  reduce.cu  utils.cu
src/cuda/devices/: graph_device.cu
src/cuda/handles/: cublas.cu  cudnn.cu  properties.cu  stream.cu
src/cuda/jit/: cache.cu  codegen.cu  compiler.cu  elementwise.cu
src/cuda/kernels/: scaling.cu  scaling_backward.cu
src/cuda/loss/: loss_kernels.cu
src/cuda/memory/: allocator.cu  cast.cu  concat_stack.cu  fill.cu  gather.cu  slice.cu  transfer.cu  virtual_memory.cu
src/cuda/nn/: causal_conv1d.cu  conv2d.cu  dropout.cu  nll_loss_1d_index.cu  optimizers.cu  rms_norm.cu  sampling.cu  selective_scan.cu  smax_2D_row.cu  smax_vec.cu  ssd_chunk_scan.cu  utils.cu
src/debug/: llama_debug.c3
src/device/: device_reference.c3  enabled_sync.c3
src/device/common/: backward_helpers.c3  codegen_context.c3  device_binding.c3  device_types.c3  index_expr.c3  jit_cache.c3  op_payload.c3  operations.c3
src/device/cuda_device/: callbacks.c3  codegen.c3  compile.c3  compile_expr.c3  compile_jit.c3  compile_register.c3  cuda_device.c3  cuda_executable_callback.c3  cuda_graph_unit.c3  error_checking.c3  executor.c3  kernels.c3  optimizer.c3  types.c3  utils.c3
src/device/hip_device/: callbacks.c3  codegen.c3  compile.c3  compile_expr.c3  compile_jit.c3  compile_register.c3  error_checking.c3  executor.c3  hip_device.c3  hip_executable_callback.c3  hip_graph_unit.c3  kernels.c3  optimizer.c3  types.c3  utils.c3
src/device/host_device/: block_pool.c3  boundary_callbacks.c3  caching_allocator.c3  compile.c3  executable_callback.c3  host_device.c3  kernel_cache.c3
src/graph/: compile.c3  execution_sequence.c3  graph.c3  graph_execution.c3  mapper.c3  op_cache.c3  stubs.c3  symbolic_chain_map.c3  symbolic_node.c3  symbolic_sequence.c3
src/hip/: hip_library.cpp  interop.h  logging.h
src/hip/blas/: einsum.cpp  max.cpp  reduce_backward.cpp  utils.cpp
src/hip/core/: assert.h  cast.h  dtype_dispatch.h  includes.h
src/hip/devices/: graph_device.cpp
src/hip/handles/: hipblas.cpp  miopen.cpp  properties.cpp  stream.cpp
src/hip/hiptensor/: backend.cpp  contraction.cpp  elementwise_binary.cpp  permutate.cpp  reduce.cpp  utils.cpp
src/hip/jit/: cache.cpp  codegen.cpp  compiler.cpp  elementwise.cpp
src/hip/kernels/: scaling.cpp  scaling_backward.cpp
src/hip/loss/: loss_kernels.cpp
src/hip/memory/: allocator.cpp  cast.cpp  concat_stack.cpp  fill.cpp  gather.cpp  slice.cpp  transfer.cpp  virtual_memory.cpp
src/hip/nn/: causal_conv1d.cpp  conv2d.cpp  dropout.cpp  nll_loss_1d_index.cpp  optimizers.cpp  rms_norm.cpp  sampling.cpp  selective_scan.cpp  smax_2D_row.cpp  smax_vec.cpp  softmax_kernels.h  ssd_chunk_scan.cpp  utils.cpp
src/interop/: dense_core.h  shape.h
src/mem/: stable_free_list.c3
src/nn/: functional.c3  loss.c3  optimizer.c3
src/tensor/: dense_core.c3  display.c3  logical_tensor.c3  shape.c3  sparse_core.c3  tensor_core.c3  tensor_ops.c3
src/tokenizers/: bpe.c3  json_parser.c3  pretokenizer.c3  tokenizer.c3  vocab.c3
src/utils/: cjson_bindings.c3  dataset.c3  hash.c3  hash_map.c3  hash_set.c3  idx.c3  invariants.c3  safetensors.c3  sampling.c3  swisstable.c3  token_dataset.c3
testing/: compare_results.py  generate_cases.py  generate_loss_cases.py  generate_optimizer_cases.py  logging_test.c3  requirements.txt  verify_grads.py
testing/cas/: cas_test.c3
testing/device/: device_interface_test.c3  device_test.c3
testing/device/common/: index_expr_debug.c3  index_expr_test.c3  operations_test.c3
testing/device/cuda_device/: cuda_backward_test.c3  cuda_basic_ops_test.c3  cuda_bf16_test.c3  cuda_cat_stack_grad_test.c3  cuda_causal_conv1d_test.c3  cuda_compile_test.c3  cuda_device_test.c3  cuda_fusion_depth_test.c3  cuda_fusion_test.c3  cuda_grad_test.c3  cuda_nn_test.c3  (+5 more)
testing/graph/: default_persistence_test.c3  graph_test.c3  stable_free_list_test.c3  test_cse_integration.c3  test_defer_panic.c3  test_fingerprint.c3  test_op_cache.c3  test_shape_propagation.c3.bak
testing/host/: test_basic_ops.c3  test_cast.c3  test_cat_stack_grad.c3  test_chain_ops.c3  test_div_numel.c3  test_dropout.c3  test_expand_bug.c3  test_fusion_depth.c3  test_grad_accum.c3  test_gradients.c3  test_matmul.c3  test_nn.c3  test_optimizer.c3  test_reduce.c3  test_reduce_axes.c3  test_reshape.c3  test_scaling.c3  test_slice_cat_stack.c3  test_softmax.c3
testing/tensor/: layout_test.c3  shape_test.c3  tensor_core_test.c3
testing/tokenizers/: bpe_benchmark.c3  bpe_test.c3  generate_test_vectors.py  test_vectors.json  tokenizer_compare.c3  tokenizer_roundtrip_test.c3
testing/utils/: swisstable_test.c3  test_idx.c3  test_safetensors.c3
(+26 files in other folders)
